python-test_driven_development/tests/5-text_indentation.txt
>>> text_indentation = __import__('5-text_indentation').text_indentation
>>> text_indentation("i am that i am")
i am that i am>>> 
>>> text_indentation("i . am the alpha? end: the omega.")
i .

am the alpha?

end:

the omega.

>>> text_indentation(i am that i am)
  File "<stdin>", line 1
    text_indentation(i am that i am)
                     ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> text_indentation("who are we? why are we here?")
who are we?

why are we here?

>>> text_indentation("i really . don't know . . Really?")
i really .

don't know .

.

Really?

>>> text_indentation("whaaaaaat      t  t t t t t t ttt t ? : ? .")
whaaaaaat      t  t t t t t t ttt t ?

:

?

.

>>> 